--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -5,14 +5,19 @@ body {
     background-color: $dorian;
 }
 
-a {
+a { // links
     color: $cloudy;
     font-weight: 600;
     text-decoration: none;
-
     &:hover {
 
     }
+}
+p a{
+   color: tomato;
+   &:hover {
+     color: firebrick;
+   }
 }
 
 p ,table, ul, li {
@@ -163,6 +168,7 @@ strong {
 }
 
 .post-teaser__title {
+    font-weight: 400;
     font-size: 22px;
     color: $iron;
 }
@@ -315,12 +321,14 @@ $secondary--medium:  rgb(205,205,205);
 table{
   font-size: 16px;
 }
+/*table*/
 th {
   text-align: left;
-  background-color: $secondary--medium;
+  background-color: $secondary--light;
 }
 td, th {
-  padding: 0 1.5rem;
+  padding: 0 1.0rem;
+  text-align: center;
 }
 td, th, tr {
   border-bottom: 1px solid rgb(38,38,38);
@@ -328,9 +336,29 @@ td, th, tr {
 td:first-of-type, th:first-of-type {
   border-left: none;
   padding-left: 0.5rem;
+  text-align: left;
 }
-.section-title{
-  font-size: 24px;
+td:last-of-type, th:last-of-type {
+  padding-right: 0.5rem;
+}
+
+.table {
+  & th{
+    background: none;
+  }
+  & td, th {
+    padding: 0 1.0rem;
+  }
+  & td, th, tr {
+    border: none;
+    border-left: 1px solid rgb(38,38,38);
+    border-right: 1px solid rgb(38,38,38);
+  }
+  & td:first-of-type, th:first-of-type {
+    text-align: center;
+  }
+}
+.section-title, .section-title strong{
   color: $secondary--medium;
 }
 blockquote {
@@ -339,12 +367,19 @@ blockquote {
   margin-left: auto;
   margin-right: auto;
 }
-blockquote p {
-  font-family: "quote";
+blockquote p, .quote {
   font-size: 90%;
+  font-family: "quote";
   line-height: 38px;
   padding: 5px 0;
   border-bottom: 1px dashed #828282;
+}
+
+.quote {
+  display: inline;
+  font-size: 14px;
+  color: $cloudy;
+  font-weight: 300;
 }
 .wrapper {
   max-width: 750px;
@@ -397,4 +432,8 @@ hr {
   .lead {
     padding: 60px 120px;
   }
+}
+
+p + h1, p + h2, p + h3, p + h4, p + h5{
+  margin-top: 30px;
 }
