--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -32,6 +32,11 @@ img {
     max-width: 100%;
 }
 
+.text-right{ text-align: right; }
+
+.left{ float: left; }
+.right{ float: right;}
+
 blockquote {
     letter-spacing: 3px;
     margin:0px;
@@ -445,4 +450,58 @@ hr {
 
 p + h1, p + h2, p + h3, p + h4, p + h5{
   margin-top: 30px;
+}
+
+/* Recipe Stats */
+
+.cf:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.stats-label, .stats{
+  float: left;
+}
+.stats-label{
+  width: 10%;
+  margin: 6px 2% 6px 0;
+  line-height: 8px;
+}
+.stats {
+  position: relative;
+  width: 88%;
+  background-color: #ddd;
+  height: 20px;
+  margin-bottom: 5px;
+  border-radius: 3px;
+}
+.stats-bar {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  border-radius: 10px;
+  text-align: right;
+  padding-right: 20px;
+  line-height: 40px;
+  background-color: #4ce0b6;
+}
+.marker{
+    height: 50%;
+    width: 10px;
+    border-radius: 999px;
+    background: black;
+    z-index: 999;
+    position: absolute;
+    top: 5px;
+    bottom: 5px;
+    margin-left: -5px;
+    text-align: right;
+}
+.marker > p{
+    transform: translate(15px,0);
+    margin: 0;
+    line-height: 12px;
+    font-size: 12px;
+    color: white;
+    text-shadow: 1px 1px black;
 }
