--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -466,7 +466,10 @@ p + h1, p + h2, p + h3, p + h4, p + h5{
   width: 10%;
   margin: 6px 2% 6px 0;
   line-height: 8px;
+  font-size: 16px;
+  color: #cdcdcd;
 }
+
 .stats {
   position: relative;
   width: 88%;
