--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -61,7 +61,7 @@ blockquote {
 
     p , table, ul, li{
         display: inline;
-        font-size: 18px;
+        font-size: 17px;
         color: $cloudy;
         font-weight: 300;
         //&:before { content: "“ "; }
@@ -330,32 +330,46 @@ table{
 }
 table strong{
   color: $secondary--dark;
+  font-size: 75%;
+  text-transform: uppercase;
+
 }
 /*table*/
+.table-container{
+  overflow: auto;
+}
+
 th {
   text-align: left;
-  background-color: $secondary--light;
+  //background-color: $secondary--light;
+  text-transform: uppercase;
+  font-size: 75%;
+  color: $secondary--medium;
 }
 td, th {
   padding: 0 1.0rem;
   text-align: center;
+  white-space: nowrap;
 }
 td, th, tr {
   border-bottom: 1px solid rgb(38,38,38);
 }
 td:first-of-type, th:first-of-type {
   border-left: none;
-  padding-left: 0.5rem;
+  padding-left: 0;
   text-align: left;
 }
 td:last-of-type, th:last-of-type {
-  padding-right: 0.5rem;
+  padding-right: 0;
 }
 
 .table {
   & th{
+    font-size: 85%;
+
     color: $secondary--medium;
     background: none;
+    text-transform: none;
   }
   & th strong{
     color: darken($secondary--medium,15%);
