--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -1,6 +1,6 @@
 /* =Base */
 body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-family: Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     color: $iron;
     background-color: $dorian;
 }
@@ -358,9 +358,6 @@ td:first-of-type, th:first-of-type {
   border-left: none;
   padding-left: 0;
   text-align: left;
-}
-td:last-of-type, th:last-of-type {
-  padding-right: 0;
 }
 
 .table {
